fix tab focus invisible slide

--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -189,7 +189,7 @@
   }
 
   @media (max-width: $tablet-width) {
-    min-width: 50%;
+    min-width: 324px;
     margin-right: 30px;
   }
 
